--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					  <a href="#page1">Home</a>
 					  <a href="#page2">Sirius Story</a>
 					  <a href="#page3">Ursa's Story</a>
-					  <a href="#page4">Blog & Artice</a>
+					  <a href="#page4">Blog & Articles</a>
 					  <a href="#page5">Contact</a>
 					</div>
 				<span style="font-size:30px;cursor:pointer" onclick="openNav()">
