--- a/index.html
+++ b/index.html
@@ -52,25 +52,30 @@
 			<a href="#"><div class="login2"></div></a>
 		</div>
 		<div class="menu2">
-			
+						<menu>
+  <label for="trigger">
+  <input id="trigger" type="checkbox" />
+  <section class="drawer-list">
+    <ul>
+      <li><a href="#page1">Home</a></li>
+      <li><a href="#page2" >Sirus Story</a></li>
+      <li><a href="#page3">Ursa's Story</a></li>
+      <li><a href="#page4">BLOG & ARTICLES</a></li>
+		<li><a href="#page5">Join with us</a></li>
+    </ul>
+  </section>
+  <hamburger> <i></i>
+    <text>
+      <close></close>
+      <open></open>
+    </text>
+  </hamburger>
+  </label>
+</menu>
 
-								<div id="mySidenav" class="sidenav">
-					  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-					  <a href="#page1">Home</a>
-					  <a href="#page2">Sirius Story</a>
-					  <a href="#page3">Ursa's Story</a>
-					  <a href="#page4">Blog & Articles</a>
-					  <a href="#page5">Contact</a>
-					</div>
-				<span style="font-size:30px;cursor:pointer" onclick="openNav()">
+								
 			
-						<div class="container" onclick="myFunction(this)">
-  <div class="bar1"></div>
-  <div class="bar2"></div>
-  <div class="bar3"></div>
-</div>
 			
-			</span>
 		</div>
 	 </div>
 	 	<div class="head2" ></div>
