--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
 	<link href="css/main.css" rel="stylesheet">
 <!--	animate-->
 	<link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/site.css">
+  <link rel="stylesheet" href="css/style.css">
   <style>
     .wow:first-child {
       visibility: hidden;
     }
-	
+/*	back to top*/
+	  <script>document.getElementsByTagName("html")[0].className += " js";</script>
+  <link rel="stylesheet" href="">
+	  
   </style>
 </head>
 
@@ -301,6 +304,10 @@ function showSlides(n) {
 }
 		
 </script>
+	
+<a href="#" class="cd-top text-replace js-cd-top">Top</a>
+	<script src="js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
+  <script src="js/main.js"></script>	
 	
 </body>
 </html>
