--- a/index.html
+++ b/index.html
@@ -3,24 +3,28 @@
 <head>
 <meta charset="utf-8">
 <title>Artkey</title>
+	
 	<link rel="stylesheet" href="css/lightbox.min.css">
 	<link href="css/main.css" rel="stylesheet">
+	
 <!--	animate-->
-	<link rel="stylesheet" href="css/animate.css">
-  <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/site.css">
   <style>
     .wow:first-child {
       visibility: hidden;
-    }
-/*	back to top*/
-	  <script>document.getElementsByTagName("html")[0].className += " js";</script>
-  <link rel="stylesheet" href="">
+	  }
+
+	  
 	  
   </style>
+	<script>document.getElementsByTagName("html")[0].className += " js";</script>
+  <link rel="stylesheet" href="css/style.css">
+	
 </head>
 
 <body>
- <div class="main" id="page1">
+ <div class="lonnhat" id="page1">
 	<div class="head">
 	 	<a href="#"><div class="logo"></div></a>	
 		<div class="menu1">
